--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Scheduling / To-Do List App with CI/CD for DevOps",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest tests/add task.test.js --runInBand"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,7 @@
     "supertest": "^6.0.0"
   }
 }
+
 
 
 
