--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Scheduling / To-Do List App with CI/CD for DevOps",
   "main": "app.js",
   "scripts": {
-    "test": "npx jest Tests/add task.test.js --runInBand"
+    "test": "npx jest Tests/*.test.js --runInBand"
   },
   "repository": {
     "type": "git",
