--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
-#Kaden
-# CI/CD pipeline by Kyal (Team 2)
+# Kaden writing test cases
+# CI/CD pipeline by Kyal 
 
 name: CI – Test Scheduling App
 
